--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-# Core Scientific Metadata Ontology
+= Core Scientific Metadata Ontology
 An ontology for the representation of scientific study metadata based on the Core Scientific Metadata Model.
 
-## Documentation 
+== Documentation 
 http://escidoc.org/ontologies/csmo# 
